--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <div class="background">
-    <img src="/images/f1.svg" alt="car" class="car">
+    <img src="/images/f1.svg" alt="car">
   </div>
   <script src="main.js"></script>
 </body>
